--- a/numpy.ipynb
+++ b/numpy.ipynb
@@ -18,7 +18,9 @@
       "outputs": [],
       "source": [
         "import numpy as np\n",
-        "import matplotlib.pyplot as plt"
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.pyplot as plt\n",
+        "import matplotlib.patches as patches"
       ]
     },
     {
@@ -38,39 +40,19 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
-        "\n",
-        "def sum_prod(X, V):\n",
-        "    '''\n",
-        "    X - матрицы (n, n)\n",
-        "    V - векторы (n, 1)\n",
-        "    Гарантируется, что len(X) == len(V)\n",
-        "    '''\n",
-        "    result = np.zeros((X[0].shape[0], 1))\n",
-        "\n",
-        "    for i in range(len(X)):\n",
-        "        result += np.dot(X[i], V[i])\n",
-        "\n",
+        "def sum_of_matrix_and_vectors(matrix, vectors):\n",
+        "    result = 0\n",
+        "    for matrix, vectors in zip(matrix, vectors):\n",
+        "        result += np.dot(matrix, vectors)\n",
         "    return result\n",
         "\n",
-        "# Тесты\n",
-        "def test_sum_prod():\n",
-        "    X1 = np.array([[1, 2], [3, 4]])\n",
-        "    X2 = np.array([[5, 6], [7, 8]])\n",
-        "    V1 = np.array([[1], [2]])\n",
-        "    V2 = np.array([[3], [4]])\n",
+        "def test_sum_of_matrix_and_vectors():\n",
+        "    matrices = [np.array([[1, 2], [3, 4]]), np.array([[5, 6], [7, 8]])]\n",
+        "    vectors = [np.array([[1], [2]]), np.array([[3], [4]])]\n",
+        "    print(sum_of_matrix_and_vectors(matrices, vectors))\n",
         "\n",
-        "    assert np.array_equal(sum_prod([X1, X2], [V1, V2]), np.array([[38], [86]]))\n",
         "\n",
-        "    X3 = np.array([[2, 0], [0, 2]])\n",
-        "    X4 = np.array([[1, 1], [1, 1]])\n",
-        "    V3 = np.array([[1], [2]])\n",
-        "    V4 = np.array([[3], [4]])\n",
-        "\n",
-        "    assert np.array_equal(sum_prod([X3, X4], [V3, V4]), np.array([[10], [14]]))\n",
-        "\n",
-        "# Запуск тестов\n",
-        "test_sum_prod()"
+        "test_sum_of_matrix_and_vectors()"
       ]
     },
     {
@@ -90,30 +72,17 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
-        "\n",
         "def binarize(M, threshold=0.5):\n",
-        "    '''\n",
-        "    Бинаризует матрицу M по порогу threshold.\n",
-        "    Все значения больше threshold становятся равными 1, иначе 0.\n",
-        "    '''\n",
-        "    return np.where(M > threshold, 1, 0)\n",
+        "    M_bin = np.where( M > threshold, 1, 0)\n",
+        "    return (M_bin)\n",
         "\n",
-        "# Тесты\n",
         "def test_binarize():\n",
-        "    M1 = np.array([[0.2, 0.6], [0.8, 0.3]])\n",
-        "    assert np.array_equal(binarize(M1, 0.5), np.array([[0, 1], [1, 0]]))\n",
+        "    M = np.array([\n",
+        "        [0.1, 0.5, 0.8],\n",
+        "        [0.7, 0.2, 0.4]\n",
+        "    ])\n",
+        "    print(binarize((M)))\n",
         "\n",
-        "    M2 = np.array([[1, 2], [3, 4]])\n",
-        "    assert np.array_equal(binarize(M2, 2), np.array([[0, 0], [1, 1]]))\n",
-        "\n",
-        "    M3 = np.array([[0.1, 0.4], [0.6, 0.9]])\n",
-        "    assert np.array_equal(binarize(M3), np.array([[0, 0], [1, 1]]))\n",
-        "\n",
-        "    M4 = np.array([[0.5, 0.5], [0.5, 0.5]])\n",
-        "    assert np.array_equal(binarize(M4), np.array([[0, 0], [0, 0]]))\n",
-        "\n",
-        "# Запуск тестов\n",
         "test_binarize()"
       ]
     },
@@ -134,38 +103,29 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
-        "\n",
         "def unique_rows(mat):\n",
-        "    '''\n",
-        "    Возвращает уникальные элементы из каждой строки матрицы.\n",
-        "    '''\n",
-        "    return [np.unique(row) for row in mat]\n",
+        "    arr = []\n",
+        "    for row in mat:\n",
+        "        arr.append(list(set(row)))\n",
+        "    return arr\n",
         "\n",
         "def unique_columns(mat):\n",
-        "    '''\n",
-        "    Возвращает уникальные элементы из каждого столбца матрицы.\n",
-        "    '''\n",
-        "    return [np.unique(mat[:, i]) for i in range(mat.shape[1])]\n",
+        "    mat = np.transpose(mat)\n",
+        "    arr = []\n",
+        "    for colums in mat:\n",
+        "        arr.append(list(set(colums)))\n",
+        "    return arr\n",
         "\n",
-        "# Тесты\n",
-        "def test_unique_rows():\n",
-        "    mat1 = np.array([[1, 2, 2], [3, 4, 5], [1, 2, 2]])\n",
-        "    assert unique_rows(mat1) == [np.array([1, 2]), np.array([3, 4, 5]), np.array([1, 2])]\n",
+        "def test_unique():\n",
+        "    test_matrix = [\n",
+        "        [1, 2, 3],\n",
+        "        [4, 5, 6],\n",
+        "        [1, 2, 3]\n",
+        "    ]\n",
+        "    print(unique_rows(test_matrix))\n",
+        "    print(unique_columns(test_matrix))\n",
         "\n",
-        "    mat2 = np.array([[1, 1, 1], [2, 2, 2], [3, 3, 3]])\n",
-        "    assert unique_rows(mat2) == [np.array([1]), np.array([2]), np.array([3])]\n",
-        "\n",
-        "def test_unique_columns():\n",
-        "    mat1 = np.array([[1, 2, 2], [3, 4, 5], [1, 2, 2]])\n",
-        "    assert unique_columns(mat1) == [np.array([1, 3]), np.array([2, 4]), np.array([2, 5])]\n",
-        "\n",
-        "    mat2 = np.array([[1, 1, 1], [2, 2, 2], [3, 3, 3]])\n",
-        "    assert unique_columns(mat2) == [np.array([1, 2, 3])]\n",
-        "\n",
-        "# Запуск тестов\n",
-        "test_unique_rows()\n",
-        "test_unique_columns()"
+        "test_unique()"
       ]
     },
     {
@@ -188,57 +148,35 @@
         "import numpy as np\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "def fill_matrix(m, n):\n",
-        "    '''\n",
-        "    Заполняет матрицу с размерами (m, n) случайными числами из нормального распределения.\n",
-        "    Затем считает мат. ожидание и дисперсию для каждого столбца и строки.\n",
-        "    Строит гистограммы значений для каждой строки и столбца.\n",
-        "    '''\n",
-        "    # Заполняем матрицу случайными числами из нормального распределения\n",
+        "def generate_and_analyze_matrix(m, n):\n",
         "    matrix = np.random.randn(m, n)\n",
-        "\n",
-        "    # Считаем мат. ожидание и дисперсию для каждого столбца и строки\n",
+        "    row_means = np.mean(matrix, axis=1)\n",
         "    col_means = np.mean(matrix, axis=0)\n",
+        "    row_vars = np.var(matrix, axis=1)\n",
         "    col_vars = np.var(matrix, axis=0)\n",
         "\n",
-        "    row_means = np.mean(matrix, axis=1)\n",
-        "    row_vars = np.var(matrix, axis=1)\n",
-        "\n",
-        "    # Строим гистограммы значений для каждой строки\n",
         "    for i in range(m):\n",
-        "        plt.hist(matrix[i], bins=20, alpha=0.5, label=f'Row {i + 1}')\n",
+        "        plt.figure(figsize=(10, 4))\n",
+        "        plt.subplot(1, 2, 1)\n",
+        "        plt.hist(matrix[i, :], bins=20, alpha=0.5, color='b', edgecolor='black')\n",
+        "        plt.title(f'Гистограмма значений в строке {i+1}')\n",
+        "        plt.subplot(1, 2, 2)\n",
+        "        plt.hist(matrix[:, i], bins=20, alpha=0.5, color='r', edgecolor='black')\n",
+        "        plt.title(f'Гистограмма значений в столбце {i+1}')\n",
+        "        plt.show()\n",
         "\n",
-        "    plt.title('Histograms for Rows')\n",
-        "    plt.xlabel('Values')\n",
-        "    plt.ylabel('Frequency')\n",
-        "    plt.legend()\n",
-        "    plt.show()\n",
+        "    return row_means, col_means, row_vars, col_vars\n",
         "\n",
-        "    # Строим гистограммы значений для каждого столбца\n",
-        "    for j in range(n):\n",
-        "        plt.hist(matrix[:, j], bins=20, alpha=0.5, label=f'Column {j + 1}')\n",
+        "row_means, col_means, row_vars, col_vars = generate_and_analyze_matrix(m, n)\n",
         "\n",
-        "    plt.title('Histograms for Columns')\n",
-        "    plt.xlabel('Values')\n",
-        "    plt.ylabel('Frequency')\n",
-        "    plt.legend()\n",
-        "    plt.show()\n",
-        "\n",
-        "    return col_means, col_vars, row_means, row_vars\n",
-        "\n",
-        "# Тесты\n",
-        "def test_fill_matrix():\n",
-        "    m = 5\n",
-        "    n = 3\n",
-        "    col_means, col_vars, row_means, row_vars = fill_matrix(m, n)\n",
-        "\n",
-        "    assert len(col_means) == n\n",
-        "    assert len(col_vars) == n\n",
-        "    assert len(row_means) == m\n",
-        "    assert len(row_vars) == m\n",
-        "\n",
-        "# Запуск тестов\n",
-        "test_fill_matrix()"
+        "print(\"Математические ожидания для строк:\")\n",
+        "print(row_means)\n",
+        "print(\"Математические ожидания для столбцов:\")\n",
+        "print(col_means)\n",
+        "print(\"Дисперсии для строк:\")\n",
+        "print(row_vars)\n",
+        "print(\"Дисперсии для столбцов:\")\n",
+        "print(col_vars)"
       ]
     },
     {
@@ -258,37 +196,27 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
-        "\n",
         "def chess(m, n, a, b):\n",
-        "    '''\n",
-        "    Заполняет матрицу (m, n) в шахматном порядке числами a и b.\n",
-        "    Первый элемент (0, 0) равен a.\n",
-        "    '''\n",
-        "    matrix = np.zeros((m, n))\n",
+        "    matrix = [[0 for _ in range(n)] for _ in range(m)]\n",
         "\n",
         "    for i in range(m):\n",
         "        for j in range(n):\n",
         "            if (i + j) % 2 == 0:\n",
-        "                matrix[i, j] = a\n",
+        "                matrix[i][j] = a\n",
         "            else:\n",
-        "                matrix[i, j] = b\n",
+        "                matrix[i][j] = b\n",
         "\n",
         "    return matrix\n",
         "\n",
         "# Тесты\n",
-        "def test_chess():\n",
-        "    m = 3\n",
-        "    n = 4\n",
-        "    a = 1\n",
-        "    b = 2\n",
-        "    result = chess(m, n, a, b)\n",
+        "m = 4\n",
+        "n = 4\n",
+        "a = 1\n",
+        "b = 2\n",
         "\n",
-        "    assert result.shape == (m, n)\n",
-        "    assert np.array_equal(result, np.array([[1, 2, 1, 2], [1, 2, 1, 2], [1, 2, 1, 2]]))\n",
-        "\n",
-        "# Запуск тестов\n",
-        "test_chess()"
+        "chessboard = chess(m, n, a, b)\n",
+        "for row in chessboard:\n",
+        "    print(row)"
       ]
     },
     {
@@ -310,55 +238,48 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
-        "import matplotlib.patches as patches\n",
-        "\n",
         "def draw_rectangle(a, b, m, n, rectangle_color, background_color):\n",
-        "    '''\n",
-        "    Отрисовывает прямоугольник с заданными размерами (a, b) на изображении размера (m, n).\n",
-        "    rectangle_color - цвет прямоугольника в формате RGB\n",
-        "    background_color - цвет фона в формате RGB\n",
-        "    '''\n",
-        "    # Создаем изображение с заданным цветом фона\n",
-        "    img = np.ones((m, n, 3)) * background_color\n",
+        "    fig = plt.figure()\n",
+        "    ax = fig.add_subplot(111)\n",
+        "    \n",
+        "    background = patches.Rectangle((0, 0), m, n, color = background_color)\n",
+        "    rect = patches.Rectangle(((m - a)/2, (n-b)/2), a, b, color = rectangle_color)\n",
         "\n",
-        "    # Создаем прямоугольник с заданными размерами и цветом\n",
-        "    rect = patches.Rectangle((0, 0), a, b, linewidth=1, edgecolor='none', facecolor=rectangle_color)\n",
-        "\n",
-        "    # Добавляем прямоугольник на изображение\n",
-        "    fig, ax = plt.subplots(1)\n",
-        "    ax.imshow(img)\n",
+        "    ax.add_patch(background)\n",
         "    ax.add_patch(rect)\n",
-        "    plt.axis('off')\n",
+        "    \n",
+        "    plt.xlim(0, m)\n",
+        "    plt.ylim(0, n)\n",
         "    plt.show()\n",
         "\n",
         "def draw_ellipse(a, b, m, n, ellipse_color, background_color):\n",
-        "    '''\n",
-        "    Отрисовывает овал с полуосями a и b на изображении размера (m, n).\n",
-        "    ellipse_color - цвет овала в формате RGB\n",
-        "    background_color - цвет фона в формате RGB\n",
-        "    '''\n",
-        "    # Создаем изображение с заданным цветом фона\n",
-        "    img = np.ones((m, n, 3)) * background_color\n",
+        "    \n",
+        "    a *= 2\n",
+        "    b *= 2\n",
+        "    \n",
+        "    fig = plt.figure()\n",
+        "    ax = fig.add_subplot(111)\n",
+        "    \n",
+        "    background = patches.Rectangle((0, 0), m, n, color = background_color)\n",
+        "    eli = patches.Ellipse((m/2, n/2), a, b, color = ellipse_color)\n",
         "\n",
-        "    # Создаем овал с заданными полуосями и цветом\n",
-        "    ellipse = patches.Ellipse((m/2, n/2), a, b, linewidth=1, edgecolor='none', facecolor=ellipse_color)\n",
-        "\n",
-        "    # Добавляем овал на изображение\n",
-        "    fig, ax = plt.subplots(1)\n",
-        "    ax.imshow(img)\n",
-        "    ax.add_patch(ellipse)\n",
-        "    plt.axis('off')\n",
+        "    ax.add_patch(background)\n",
+        "    ax.add_patch(eli)\n",
+        "    \n",
+        "    plt.xlim(0, m)\n",
+        "    plt.ylim(0, n)\n",
         "    plt.show()\n",
         "\n",
-        "# Тесты\n",
-        "def test_draw_shapes():\n",
-        "    draw_rectangle(40, 20, 100, 80, (0.5, 0.2, 0.8), (1, 1, 1))\n",
-        "    draw_ellipse(30, 50, 120, 80, (0.2, 0.7, 0.4), (1, 1, 1))\n",
+        "a = 40\n",
+        "b = 90\n",
+        "m = 100\n",
+        "n = 300\n",
+        "rectangle_color = '#9400D3'\n",
+        "ellipse_color = '#A52A2A'\n",
+        "background_color = '#B0E0E6'\n",
         "\n",
-        "# Запуск тестов\n",
-        "test_draw_shapes()"
+        "draw_rectangle(a, b, m, n, rectangle_color, background_color)\n",
+        "draw_ellipse(a, b, m, n, ellipse_color, background_color)"
       ]
     },
     {
@@ -379,48 +300,36 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
-        "import matplotlib.pyplot as plt\n",
+        "def time_series_analysis(ts, p):\n",
         "\n",
-        "def calculate_statistics(time_series):\n",
-        "    mean_value = np.mean(time_series)\n",
-        "    variance_value = np.var(time_series)\n",
-        "    std_deviation = np.std(time_series)\n",
+        "    mean = np.mean(ts)\n",
+        "    variance = np.var(ts)\n",
+        "    deviation = np.std(ts)\n",
         "\n",
-        "    # Находим индексы локальных максимумов и минимумов\n",
-        "    local_maxima = (np.diff(np.sign(np.diff(time_series))) < 0).nonzero()[0] + 1\n",
-        "    local_minima = (np.diff(np.sign(np.diff(time_series))) > 0).nonzero()[0] + 1\n",
+        "    local_min = []\n",
+        "    local_max = []\n",
+        "    for i in range(1, len(ts) - 1):\n",
+        "        if ts[i] < ts[i - 1] and ts[i] < ts[i + 1]:\n",
+        "            local_min.append(ts[i])\n",
+        "        if ts[i] > ts[i - 1] and ts[i] > ts[i + 1]:\n",
+        "            local_max.append(ts[i])\n",
         "\n",
-        "    return mean_value, variance_value, std_deviation, local_maxima, local_minima\n",
+        "    smooth_ts = np.convolve(ts, np.ones(p), mode='valid') / p\n",
         "\n",
-        "def moving_average(time_series, window_size):\n",
-        "    result = np.convolve(time_series, np.ones(window_size)/window_size, mode='valid')\n",
-        "    return np.concatenate(([np.nan] * (window_size-1), result))\n",
+        "    return mean, variance, deviation, local_min, local_max, smooth_ts\n",
         "\n",
         "# Пример временного ряда\n",
-        "time_series = np.array([1, 3, 7, 1, 2, 6, 4, 8, 5, 3, 9, 2, 7])\n",
+        "Series = np.array([2, 4, 5, 6, 5, 1, 7, 3, 7, 9])\n",
+        "p = 3\n",
         "\n",
-        "# Рассчитываем статистики\n",
-        "mean_value, variance_value, std_deviation, local_maxima, local_minima = calculate_statistics(time_series)\n",
+        "mean, variance, deviation, local_max, local_min, smoothed_series = time_series_analysis(Series, p)\n",
         "\n",
-        "# Выводим результаты\n",
-        "print(f\"Математическое ожидание: {mean_value}\")\n",
-        "print(f\"Дисперсия: {variance_value}\")\n",
-        "print(f\"СКО: {std_deviation}\")\n",
-        "print(f\"Локальные максимумы: {local_maxima}\")\n",
-        "print(f\"Локальные минимумы: {local_minima}\")\n",
-        "\n",
-        "# Рассчитываем ряд скользящего среднего с окном размера p\n",
-        "window_size = 3\n",
-        "moving_avg_series = moving_average(time_series, window_size)\n",
-        "\n",
-        "# Выводим графики для визуализации\n",
-        "plt.plot(time_series, label='Исходный временной ряд')\n",
-        "plt.plot(moving_avg_series, label=f'Скользящее среднее (окно {window_size})', linestyle='dashed')\n",
-        "plt.scatter(local_maxima, time_series[local_maxima], color='red', label='Локальные максимумы')\n",
-        "plt.scatter(local_minima, time_series[local_minima], color='green', label='Локальные минимумы')\n",
-        "plt.legend()\n",
-        "plt.show()"
+        "print(\"Математическое ожидание:\", mean)\n",
+        "print(\"Дисперсия:\", variance)\n",
+        "print(\"СКО:\", deviation)\n",
+        "print(\"Локальные максимумы:\", local_max)\n",
+        "print(\"Локальные минимумы:\", local_min)\n",
+        "print(\"Скользящее среднее:\", smoothed_series)"
       ]
     },
     {
@@ -441,32 +350,22 @@
       },
       "outputs": [],
       "source": [
-        "import numpy as np\n",
+        "def one_hot_encoding(labels, num_classes):\n",
+        "    # Создаем матрицу нулей размером (количество меток, количество классов)\n",
+        "    encoding = np.zeros((len(labels), num_classes), dtype=int)\n",
         "\n",
-        "def one_hot_encoding(class_labels):\n",
-        "    '''\n",
-        "    Выполняет one-hot-encoding для данного вектора с целочисленными метками классов.\n",
-        "    '''\n",
-        "    num_classes = len(np.unique(class_labels))\n",
-        "    encoding_matrix = np.zeros((len(class_labels), num_classes), dtype=int)\n",
+        "    # Заполняем one-hot-encoding\n",
+        "    for i, label in enumerate(labels):\n",
+        "        encoding[i, label] = 1\n",
         "\n",
-        "    for i, label in enumerate(class_labels):\n",
-        "        encoding_matrix[i, label] = 1\n",
+        "    return encoding\n",
         "\n",
-        "    return encoding_matrix\n",
+        "# Пример использования\n",
+        "labels = [0, 2, 3, 0]\n",
+        "num_classes = 4\n",
         "\n",
-        "# Тесты\n",
-        "def test_one_hot_encoding():\n",
-        "    class_labels1 = [0, 2, 3, 0]\n",
-        "    result1 = one_hot_encoding(class_labels1)\n",
-        "    assert np.array_equal(result1, np.array([[1, 0, 0, 0], [0, 0, 1, 0], [0, 0, 0, 1], [1, 0, 0, 0]]))\n",
-        "\n",
-        "    class_labels2 = [2, 1, 0, 2, 1]\n",
-        "    result2 = one_hot_encoding(class_labels2)\n",
-        "    assert np.array_equal(result2, np.array([[0, 0, 1], [0, 1, 0], [1, 0, 0], [0, 0, 1], [0, 1, 0]]))\n",
-        "\n",
-        "# Запуск тестов\n",
-        "test_one_hot_encoding()"
+        "one_hot_encoded = one_hot_encoding(labels, num_classes)\n",
+        "print(one_hot_encoded)"
       ]
     }
   ],
