--- a/Аййылдыз Гюлин  ЛБ-1 АТ-01.ipynb
+++ b/Аййылдыз Гюлин  ЛБ-1 АТ-01.ipynb
@@ -54,30 +54,25 @@
       },
       "outputs": [],
       "source": [
-        "def has_unique_characters(s):\n",
-        "    # Используем множество для отслеживания уникальных символов\n",
-        "    seen_chars = set()\n",
+        "def OneSymbol(s):\n",
+        "    count = 0\n",
+        "    b = True\n",
+        "    for i in s:\n",
+        "        for g in s:\n",
+        "            if i == g:\n",
+        "                count += 1\n",
+        "            if count == len(s) + 1:\n",
+        "                b = False\n",
+        "    if b != False:\n",
+        "        return True\n",
+        "    else:\n",
+        "        return False\n",
         "\n",
-        "    for char in s:\n",
-        "        if char in seen_chars:\n",
-        "            # Если символ уже встречался, значит, не все символы уникальны\n",
-        "            return False\n",
-        "        seen_chars.add(char)\n",
+        "def Test_One_symbol():\n",
+        "    print(OneSymbol(\"abcd\"))#True\n",
+        "    print(OneSymbol(\"bbcd\"))#False\n",
         "\n",
-        "    # Если цикл завершился, значит, все символы уникальны\n",
-        "    return True\n",
-        "\n",
-        "# Тесты\n",
-        "def test_has_unique_characters():\n",
-        "    assert has_unique_characters(\"abcde\") == True\n",
-        "    assert has_unique_characters(\"hello\") == False\n",
-        "    assert has_unique_characters(\"world\") == True\n",
-        "    assert has_unique_characters(\"python\") == True\n",
-        "    assert has_unique_characters(\"aa\") == False\n",
-        "    assert has_unique_characters(\"\") == True\n",
-        "\n",
-        "# Запуск тестов\n",
-        "test_has_unique_characters()"
+        "Test_One_symbol()"
       ]
     },
     {
@@ -97,23 +92,32 @@
       "metadata": {
         "id": "6tkfDJRz6dp_"
       },
-      "outputs": [],
+      "outputs": [
+        {
+          "ename": "",
+          "evalue": "",
+          "output_type": "error",
+          "traceback": [
+            "\u001b[1;31m'c:\\Users\\EmrahPC\\AppData\\Local\\Programs\\Python\\Python310\\python.exe' ile hücreleri çalıştırmak için ipykernel paketi gerekir.\n",
+            "\u001b[1;31mRun the following command to install 'ipykernel' into the Python environment. \n",
+            "\u001b[1;31mCommand: 'c:/Users/EmrahPC/AppData/Local/Programs/Python/Python310/python.exe -m pip install ipykernel -U --user --force-reinstall'"
+          ]
+        }
+      ],
       "source": [
-        "def count_set_bits(num):\n",
-        "    # Преобразуем число в двоичную строку и считаем количество '1'\n",
-        "    binary_representation = bin(num)\n",
-        "    return binary_representation.count('1')\n",
+        "def Bit_Checker(n):\n",
+        "    number = bin(n)\n",
+        "    count = 0\n",
+        "    for i in number:\n",
+        "        if i == \"1\":\n",
+        "            count += 1\n",
+        "    return count\n",
         "\n",
-        "# Тесты\n",
-        "def test_count_set_bits():\n",
-        "    assert count_set_bits(5) == 2  # Бинарное представление: 101\n",
-        "    assert count_set_bits(8) == 1  # Бинарное представление: 1000\n",
-        "    assert count_set_bits(15) == 4 # Бинарное представление: 1111\n",
-        "    assert count_set_bits(0) == 0  # Ноль не имеет установленных битов\n",
-        "    assert count_set_bits(1) == 1  # Бинарное представление: 1\n",
+        "def Test_Bit_Checker():\n",
+        "    print(Bit_Checker(255)) #8\n",
+        "    print(Bit_Checker(23)) #4\n",
         "\n",
-        "# Запуск тестов\n",
-        "test_count_set_bits()"
+        "Test_Bit_Checker()"
       ]
     },
     {
@@ -142,34 +146,24 @@
       "outputs": [],
       "source": [
         "def magic(n):\n",
-        "    # Преобразуем число в строку для удобства обработки цифр\n",
-        "    num_str = str(n)\n",
+        "    result = 0\n",
+        "    string = str(n)\n",
+        "    count = 1\n",
+        "    while(int(string) - 10 > 0):\n",
+        "        for i in string:\n",
+        "            count *= int(i)\n",
+        "        string = str(count)\n",
+        "        count = 1\n",
+        "        result = result + 1\n",
+        "    return result\n",
         "\n",
-        "    # Функция для перемножения цифр числа\n",
-        "    def multiply_digits(number):\n",
-        "        result = 1\n",
-        "        for digit in str(number):\n",
-        "            result *= int(digit)\n",
-        "        return result\n",
         "\n",
-        "    # Итеративно перемножаем цифры до тех пор, пока число не станет однозначным\n",
-        "    count = 0\n",
-        "    while len(str(n)) > 1:\n",
-        "        n = multiply_digits(n)\n",
-        "        count += 1\n",
         "\n",
-        "    return count\n",
+        "def Test_magic():\n",
+        "    print(magic(39)) #3\n",
+        "    print(magic(999)) #4\n",
         "\n",
-        "# Тесты\n",
-        "def test_magic():\n",
-        "    assert magic(39) == 3\n",
-        "    assert magic(4) == 0\n",
-        "    assert magic(999) == 4\n",
-        "    assert magic(12345) == 2\n",
-        "    assert magic(7) == 0\n",
-        "\n",
-        "# Запуск тестов\n",
-        "test_magic()"
+        "Test_magic()"
       ]
     },
     {
@@ -191,29 +185,27 @@
       },
       "outputs": [],
       "source": [
-        "def mse(pred, true):\n",
-        "    # Проверяем, что векторы одинаковой длины\n",
-        "    if len(pred) != len(true):\n",
-        "        raise ValueError(\"Vectors must have the same length\")\n",
+        "def mse(first, second):\n",
+        "    \n",
+        "    assert len(first) == len(second), 'Not same vector size'\n",
+        "    \n",
+        "    vector_len = len(first)\n",
+        "    sum = 0\n",
+        "    mean = 0\n",
+        "    \n",
+        "    for i in range(vector_len):\n",
+        "        sum += (first[i] - second[i])**2\n",
+        "    \n",
+        "    mean = sum / vector_len\n",
+        "    result = mean ** 0.5\n",
+        "    \n",
+        "    return(result)\n",
         "\n",
-        "    # Рассчитываем квадраты разностей между соответствующими элементами векторов\n",
-        "    squared_diff = [(p - t) ** 2 for p, t in zip(pred, true)]\n",
+        "def Test_mse():   \n",
+        "    print(mse([1, 2, 3, 4], [2, 3, 4, 5])), \"Successfully\"\n",
+        "    assert mse([1, 2, 3, 4], [2, 3, 4, 5]) == 1, \"Failed\"\n",
         "\n",
-        "    # Рассчитываем среднее значение квадратов разностей\n",
-        "    mean_squared_diff = sum(squared_diff) / len(pred)\n",
-        "\n",
-        "    return mean_squared_diff\n",
-        "\n",
-        "# Тесты\n",
-        "def test_mse():\n",
-        "    assert mse([1, 2, 3], [4, 5, 6]) == 9\n",
-        "    assert mse([0, 0, 0], [0, 0, 0]) == 0\n",
-        "    assert mse([-1, 0, 1], [1, 0, -1]) == 4\n",
-        "    assert mse([2, 4, 6], [1, 3, 5]) == 1\n",
-        "    assert mse([0, 0, 0], [1, 1, 1]) == 1\n",
-        "\n",
-        "# Запуск тестов\n",
-        "test_mse()"
+        "Test_mse()"
       ]
     },
     {
@@ -237,43 +229,47 @@
       },
       "outputs": [],
       "source": [
-        "def prime_factorization(n):\n",
-        "    # Проверка на положительное число\n",
-        "    if n <= 0:\n",
-        "        raise ValueError(\"Input must be a positive integer\")\n",
-        "\n",
-        "    result = \"\"\n",
-        "    i = 2  # Начинаем с делителя 2, самого маленького простого числа\n",
-        "\n",
-        "    while i * i <= n:\n",
-        "        count = 0\n",
-        "        while n % i == 0:\n",
-        "            n //= i\n",
-        "            count += 1\n",
-        "\n",
-        "        if count > 0:\n",
-        "            if count == 1:\n",
-        "                result += f\"({i})\"\n",
+        "def factory(number):\n",
+        "    result = []\n",
+        "    divisor = 2\n",
+        "    \n",
+        "    while divisor <= number:\n",
+        "        power = 0\n",
+        "        while number % divisor == 0:\n",
+        "            number //= divisor\n",
+        "            power += 1\n",
+        "        \n",
+        "        if power > 0:\n",
+        "            if power == 1:\n",
+        "                result.append(f\"({divisor})\")\n",
         "            else:\n",
-        "                result += f\"({i}**{count})\"\n",
-        "\n",
-        "        i += 1\n",
-        "\n",
-        "    if n > 1:\n",
-        "        result += f\"({n})\"\n",
-        "\n",
-        "    return result\n",
+        "                result.append(f\"({divisor}**{power})\")\n",
+        "        \n",
+        "        divisor += 1\n",
+        "    \n",
+        "    return ''.join(result)\n",
         "\n",
         "# Тесты\n",
-        "def test_prime_factorization():\n",
-        "    assert prime_factorization(86240) == \"(2**5)(5)(7**2)(11)\"\n",
-        "    assert prime_factorization(2) == \"(2)\"\n",
-        "    assert prime_factorization(17) == \"(17)\"\n",
-        "    assert prime_factorization(1) == \"\"\n",
-        "    assert prime_factorization(100) == \"(2**2)(5**2)\"\n",
+        "def test_factory():\n",
+        "    # Проверка на число 1 (разложение: \"\")\n",
+        "    assert factory(1) == \"\"\n",
+        "    \n",
+        "    # Проверка на число 86240 (разложение: \"(2**5)(5)(7**2)(11)\")\n",
+        "    assert factory(86240) == \"(2**5)(5)(7**2)(11)\"\n",
+        "    \n",
+        "    # Проверка на число 13 (простое число, разложение: \"(13)\")\n",
+        "    assert factory(13) == \"(13)\"\n",
+        "    \n",
+        "    # Проверка на число 100 (разложение: \"(2**2)(5**2)\")\n",
+        "    assert factory(100) == \"(2**2)(5**2)\"\n",
+        "    \n",
+        "    # Проверка на число 1024 (разложение: \"(2**10)\")\n",
+        "    assert factory(1024) == \"(2**10)\"\n",
+        "    \n",
+        "    print(\"Все тесты пройдены успешно!\")\n",
         "\n",
         "# Запуск тестов\n",
-        "test_prime_factorization()"
+        "test_factory()"
       ]
     },
     {
@@ -298,28 +294,29 @@
       "outputs": [],
       "source": [
         "def pyramid(number):\n",
-        "    # Проверка на неотрицательное число\n",
-        "    if number < 0:\n",
-        "        raise ValueError(\"Input must be a non-negative integer\")\n",
-        "\n",
+        "def pyramid(n):\n",
+        "    total = 0\n",
         "    k = 1\n",
-        "    while (k * (k + 1) * (2 * k + 1)) // 6 <= number:\n",
-        "        if (k * (k + 1) * (2 * k + 1)) // 6 == number:\n",
-        "            return k\n",
+        "\n",
+        "    while total < n:\n",
+        "        total += k ** 2\n",
         "        k += 1\n",
         "\n",
-        "    return \"It is impossible\"\n",
+        "    if total == n:\n",
+        "        return k - 1\n",
+        "    else:\n",
+        "        return \"It is impossible\"\n",
         "\n",
         "# Тесты\n",
         "def test_pyramid():\n",
         "    assert pyramid(1) == 1\n",
-        "    assert pyramid(5) == \"It is impossible\"\n",
-        "    assert pyramid(14) == 2\n",
-        "    assert pyramid(30) == 3\n",
-        "    assert pyramid(55) == 4\n",
-        "    assert pyramid(91) == 5\n",
+        "    assert pyramid(6) == \"It is impossible\"\n",
+        "    assert pyramid(14) == 3\n",
+        "    assert pyramid(30) == 4\n",
+        "    assert pyramid(55) == 5\n",
         "\n",
-        "# Запуск тестов\n",
+        "    print(\"Все тесты пройдены успешно!\")\n",
+        "\n",
         "test_pyramid()"
       ]
     },
@@ -341,38 +338,31 @@
       },
       "outputs": [],
       "source": [
-        "def is_balanced_number(num):\n",
-        "    # Преобразуем число в строку для удобства обработки цифр\n",
-        "    num_str = str(num)\n",
-        "    num_digits = len(num_str)\n",
-        "\n",
-        "    # Проверка на положительное число\n",
-        "    if num <= 0:\n",
-        "        raise ValueError(\"Input must be a positive integer\")\n",
-        "\n",
-        "    # Расчет индекса средней цифры или цифр\n",
-        "    if num_digits % 2 == 0:\n",
-        "        mid_left = num_digits // 2 - 1\n",
-        "        mid_right = num_digits // 2\n",
+        "def balance(number):\n",
+        "    num_str = str(number)\n",
+        "    length = len(num_str)\n",
+        "    \n",
+        "    if length % 2 == 0:\n",
+        "        middle1 = length // 2 - 1\n",
+        "        middle2 = length // 2\n",
         "    else:\n",
-        "        mid_left = mid_right = num_digits // 2\n",
+        "        middle1 = middle2 = length // 2\n",
         "\n",
-        "    # Суммирование цифр до и после средних\n",
-        "    sum_before_mid = sum(int(digit) for digit in num_str[:mid_left])\n",
-        "    sum_after_mid = sum(int(digit) for digit in num_str[mid_right + 1:])\n",
-        "\n",
-        "    return sum_before_mid == sum_after_mid\n",
+        "    sum_before_middle = sum(map(int, num_str[:middle1 + 1]))\n",
+        "    sum_after_middle = sum(map(int, num_str[middle2:]))\n",
+        "    \n",
+        "    return sum_before_middle == sum_after_middle\n",
         "\n",
         "# Тесты\n",
-        "def test_is_balanced_number():\n",
-        "    assert is_balanced_number(121) == True  # 1 == 1\n",
-        "    assert is_balanced_number(12321) == True  # 1+2 == 2+1\n",
-        "    assert is_balanced_number(12345) == False  # 1+2+3 != 4+5\n",
-        "    assert is_balanced_number(11111) == True  # 1 == 1\n",
-        "    assert is_balanced_number(987654321) == False  # 9+8+7 != 6+5+4+3+2+1\n",
+        "def test_balance():\n",
+        "    assert balance(121) == True\n",
+        "    assert balance(12321) == True\n",
+        "    assert balance(12345) == False\n",
+        "    assert balance(123456) == False\n",
         "\n",
-        "# Запуск тестов\n",
-        "test_is_balanced_number()"
+        "    print(\"Все тесты пройдены успешно!\")\n",
+        "\n",
+        "test_balance()"
       ]
     }
   ],
@@ -385,7 +375,8 @@
       "name": "python3"
     },
     "language_info": {
-      "name": "python"
+      "name": "python",
+      "version": "3.10.0"
     }
   },
   "nbformat": 4,
